# simic_combine

./: CLAUDE.md  LICENSE  README.md  pyproject.toml
data/: Hypothyroid kitten study - _Clinical Cases UTD (11_30_25).csv
src/simic_combine/: __init__.py  data.py  model.py  predict.py  visualize.py
src/simic_combine.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: test_model.py
